--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -4,14 +4,14 @@
   <% @clothings.each do |clothing| %>
     <div class="clothing-item">
       <% if clothing.photo.attached? %>
-        <%= image_tag clothing.photo.variant(resize_to_limit: [300, 300]), alt: clothing.name %>
+        <%= cl_image_tag clothing.photo.key, alt: "" %>
       <% else %>
-        <%= image_tag "placeholder.jpg", alt: "No Image Available", size: "300x300" %>
+        <%= cl_image_tag clothing.photo.key, alt: "", size: "300x300" %>
       <% end %>
 
       <h2><%= clothing.name %></h2>
       <p>Size: <%= clothing.size %></p>
-      <p>Price: <%= number_to_currency(clothing.price) %> per day</p>
+      <p>Price: <%= number_to_currency(clothing.price, unit: "¥", delimiter: ",") %> per day</p>
 
       <%= link_to "View Details", clothing_path(clothing), class: "btn btn-primary" %>
     </div>
