--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/clothing";
 
 
 .clothing-list {
@@ -29,4 +30,3 @@
   max-width: 100%;
   border-radius: 10px;
 }
-
