add link to clothing cards

--- a/app/assets/stylesheets/components/_card_trip.scss
+++ b/app/assets/stylesheets/components/_card_trip.scss
@@ -1,7 +1,15 @@
 .card-trip {
+  position: relative;
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
+  a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%
+  }
 }
 
 .card-trip > img {
