--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,22 @@
-<h1>Homepage</h1>
 <div class="container">
-  <div class="cards">
-    <% @clothing.each do |clothing| %>
-    <div class="card-trip">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-      <div class="card-trip-infos">
-        <div>
-          <h2><%= clothing.name %></h2>
-          <p>Short description here!</p>
+  <h1>Homepage</h1>
+  <div class="container">
+    <div class="cards">
+      <% @clothing.each do |clothing| %>
+      <div class="card-trip">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= clothing.name %></h2>
+            <p>Short description here!</p>
+          </div>
+          <h2 class="card-trip-pricing"><%= clothing.price %></h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
         </div>
-        <h2 class="card-trip-pricing"><%= clothing.price %></h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        <%= link_to "", clothing_path(clothing)%>
       </div>
+      <% end %>
     </div>
-    <% end %>
   </div>
+  <p>Find me in app/views/pages/home.html.erb</p>
 </div>
-<p>Find me in app/views/pages/home.html.erb</p>
