--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
-
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(  <%= cl_image_path(@clothing.photo.key) %>);"></div>
+  <%= link_to root_path do %>
+    <i class="fa-solid fa-chevron-left text-black"></i>
+  <% end %>
+  <div class="mt-4 banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(  <%= cl_image_path(@clothing.photo.key) %>);"></div>
   <h2 class="fw-bold pt-4 mb-4"><%= @clothing.name %></h2>
   <div class="mt-4">
       <p ><strong>Size:</strong> <%= @clothing.size %></p>
