--- a/app/assets/stylesheets/components/_clothing.scss
+++ b/app/assets/stylesheets/components/_clothing.scss
@@ -1,22 +1,52 @@
- 
 
-  .banner {
-    background-size: cover;
-    background-position: center;
-    padding: 150px 0;
-  }
+.parent {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px;
+  width: 100%;
+  height: 500px;
+}
 
-  .banner h1 {
-    margin: 0;
-    color: white;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    font-size: 32px;
-    font-weight: bold;
-  }
 
-  .banner p {
-    font-size: 20px;
-    color: white;
-    opacity: .7;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  }
+.banner {
+  grid-row: 1 / span 2;
+  grid-column: 1;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+}
+
+
+.div2, .div3, .div4, .div5 {
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+}
+
+
+.div2 { grid-row: 1; grid-column: 2; }
+.div3 { grid-row: 1; grid-column: 3; }
+.div4 { grid-row: 2; grid-column: 2; }
+.div5 { grid-row: 2; grid-column: 3; }
+
+
+.booking-card-container {
+  background: white;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  padding: 20px;
+  width: 100%;
+}
+
+
+h2 {
+  margin-top: 20px;
+}
+
+.mt-4 p {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
