--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -2,16 +2,31 @@
   <%= link_to root_path do %>
     <i class="fa-solid fa-chevron-left text-black"></i>
   <% end %>
-  <div class="mt-4 banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(  <%= cl_image_path(@clothing.photo.key) %>);"></div>
-  <h2 class="fw-bold pt-4 mb-4"><%= @clothing.name %></h2>
-  <div class="mt-4">
-      <p ><strong>Size:</strong> <%= @clothing.size %></p>
-      <p ><strong>Color:</strong> <%= @clothing.color %></p>
-      <p ><%= @clothing.description %></p>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="parent">
+        <div class="banner div1" style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('<%= cl_image_path(@clothing.photo.key) %>');"></div>
+        <div class="div2" style="background-image: url('<%= cl_image_path(@clothing.photo.key) %>');"></div>
+        <div class="div3" style="background-image: url('<%= cl_image_path(@clothing.photo.key) %>');"></div>
+        <div class="div4" style="background-image: url('<%= cl_image_path(@clothing.photo.key) %>');"></div>
+        <div class="div5" style="background-image: url('<%= cl_image_path(@clothing.photo.key) %>');"></div>
+      </div>
+    </div>
   </div>
 
-  <div >
-    <p><%= @clothing.price %>$</p>
-  </div>
+  <div class="row mt-4">
+    <div class="col-md-8">
+      <h2 class="fw-bold pt-4 mb-4"><%= @clothing.name %></h2>
+      <div class="mt-4">
+        <p><strong>Size:</strong> <%= @clothing.size %></p>
+        <p><strong>Color:</strong> <%= @clothing.color %></p>
+        <p><%= @clothing.description %></p>
+      </div>
+    </div>
 
+    <div class="col-md-4">
+      <%= render "form", clothing: @clothing, booking: @booking %>
+    </div>
+  </div>
 </div>
