--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
   <h1>Homepage</h1>
-  <div class="container">
-    <div class="cards">
-      <% @clothings.each do |clothing| %>
+
+  <div class="cards">
+    <% @clothings.each do |clothing| %>
+      <%= link_to clothing_path(clothing), class: "card-trip-link" do %>
         <div class="card-trip">
           <%= cl_image_tag clothing.photo.key, alt: "Image of #{clothing.name}" %>
           <div class="card-trip-infos">
@@ -12,10 +13,11 @@
             </div>
             <h2 class="card-trip-pricing">¥<%= clothing.price %></h2>
           </div>
-          <%= link_to "", clothing_path(clothing)%>
         </div>
       <% end %>
-    </div>
+      </%= link_to %>  
+    <% end %>
   </div>
+
   <p>Find me in app/views/pages/home.html.erb</p>
 </div>
