--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,15 @@
-<div class="container">
-  <h1>Homepage</h1>
+<div class="banner-main" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "banner" %>);">
+  <div class="container d-flex flex-column justify-content-center align-items-center">
+    <h1>Color your life with heritage</h1>
+    <form class="mt-4 w-75 d-flex gap-2">
+      <input class="form-control" type="text" placeholder="kimono">
+      <input class="btn btn-success" type="submit" value="search">
+    </form>
+  </div>
+</div>
 
+<div class="container">
+  <h1 class="mt-4">All clothings</h1>
   <div class="cards">
     <% @clothings.each do |clothing| %>
       <%= link_to clothing_path(clothing), class: "card-trip-link" do %>
@@ -15,9 +24,7 @@
           </div>
         </div>
       <% end %>
-      </%= link_to %>  
+      </%= link_to %>
     <% end %>
   </div>
-
-  <p>Find me in app/views/pages/home.html.erb</p>
 </div>
