--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,11 @@
       <%= image_tag "hhlogo", alt: "text" %>
     <% end %>
 
+    <form action="/clothings" method="get">
+      <input type="text" name="q" value="<%= params[:q] %>">
+      <button type="submit">Search</button>
+    </form>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
