--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
           <div class="card-trip-infos">
             <div>
               <h2><%= clothing.name %></h2>
-              <p>Short description here!</p>
+              <p><%= clothing.description %></p>
             </div>
             <h2 class="card-trip-pricing">¥<%= clothing.price %></h2>
           </div>
