--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner-main" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "banner" %>);">
+<div class="banner-main" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "banner.jpeg" %>);">
   <div class="container d-flex flex-column justify-content-center align-items-center">
     <h1>Color your life with heritage</h1>
     <form class="mt-4 w-75 d-flex gap-2">
