--- a/app/views/owner/bookings/index.html.erb
+++ b/app/views/owner/bookings/index.html.erb
@@ -26,7 +26,7 @@
         <input class="btn btn-outline-danger btn-sm rounded-pill" type="submit" value="Rejected">
       </form>    </li>
   </ul>
-  <h1 class="mt-4">All bookings for <%= current_user.email %></h1>
+  <h1 class="mt-4">My clothes</h1>
   <% @bookings.each do |booking| %>
     <div class="mt-4 card-product">
       <%= cl_image_tag booking.clothing.photo.key, alt: "" %>
