--- a/app/views/owner/bookings/index.html.erb
+++ b/app/views/owner/bookings/index.html.erb
@@ -2,30 +2,9 @@
   <%= link_to root_path do %>
     <i class="mt-4 fa-solid fa-chevron-left text-black"></i>
   <% end %>
-  <ul class="mt-4 nav nav-pills nav-fill">
-    <li class="nav-item">
-      <form action="">
-        <input type="hidden" name="status" value="">
-        <input class="btn btn-outline btn-sm rounded-pill" type="submit" value="Clear">
-      </form>
-    </li>
-    <li class="nav-item">
-      <form action="">
-        <input type="hidden" name="status" value="accepted">
-        <input class="btn btn-success btn-sm rounded-pill" type="submit" value="Accepted">
-      </form>
-    </li>
-    <li class="nav-item">
-      <form action="">
-        <input type="hidden" name="status" value="pending">
-        <input class="btn btn-warning btn-sm rounded-pill" type="submit" value="Pending">
-      </form>    </li>
-    <li class="nav-item">
-      <form action="">
-        <input type="hidden" name="status" value="rejected">
-        <input class="btn btn-outline-danger btn-sm rounded-pill" type="submit" value="Rejected">
-      </form>    </li>
-  </ul>
+
+  <%= render "shared/bookings_filter", path: owner_bookings_path %>
+
   <h1 class="mt-4">My clothes</h1>
   <% @bookings.each do |booking| %>
     <div class="mt-4 card-product">
@@ -33,15 +12,28 @@
       <div class="card-product-infos">
         <h2><%= booking.clothing.name %></h2>
 
-        <% if booking.status == "accepted" %>
-          <div class="badge rounded-pill bg-success"><%= booking.status %></div>
-        <% elsif booking.status == "pending" %>
-          <div class="badge rounded-pill bg-warning"><%= booking.status %></div>
-        <% else %>
-          <div class="badge rounded-pill bg-danger"><%= booking.status %></div>
+        <%= render "status", status: booking.status %>
+
+        <% if booking.start_date && booking.end_date %>
+          <p><%= booking.start_date.strftime("%A, %b %d") %> to <%= booking.end_date.strftime("%A, %b %d") %></p>
         <% end %>
 
-        <p><%= booking.start_date.strftime("%A, %b %d") %> to <%= booking.end_date.strftime("%A, %b %d") %></p>
+        <% if booking.status == "pending" %>
+          <div class="d-flex">
+            <%= form_with(model: booking, url: owner_booking_path(booking), method: :patch, local: true) do |f| %>
+              <div class="mt-2">
+                <%= f.hidden_field :status, value: 'accepted' %>
+                <%= f.submit "Accept", class: 'btn btn-sm btn-success me-2' %>
+              </div>
+            <% end %>
+            <%= form_with(model: booking, url: owner_booking_path(booking), method: :patch, local: true) do |f| %>
+              <div class="mt-2">
+                <%= f.hidden_field :status, value: 'rejected' %>
+                <%= f.submit "Reject", class: 'btn btn-danger btn-sm' %>
+              </div>
+            <% end %>
+          </div>
+        <% end %>
       </div>
     </div>
   <% end %>
