--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -1,15 +1,14 @@
 .card-product {
   overflow: hidden;
-  height: 120px;
+  height: 12rem;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  align-items: center;
 }
 
 .card-product img {
   height: 100%;
-  width: 30%;
+  width: 40%;
   object-fit: cover;
 }
 
@@ -29,4 +28,12 @@
 
 .card-product .card-product-infos {
   padding: 16px;
+  width: 100%;
+}
+
+.status-circle {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  padding: 0;
 }
