--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,7 @@
               <div>
                 <h2><%= clothing.name %></h2>
                 <p><%= clothing.description %></p>
+                <p><%= clothing.country %></p>
               </div>
               <h2 class="card-trip-pricing">¥<%= clothing.price %></h2>
             </div>
