--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,51 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  background: white;
+  border-radius: 30px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+  margin: 20px auto;
+  padding: 10px 15px;
+}
+
+.search-bar input {
+  flex: 1;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 30px;
+}
+
+.search-bar input::placeholder {
+  color: #888;
+}
+
+.search-btn {
+  background-color: #386aff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 50%;
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.search-btn:hover {
+  background-color: #3497f9;
+}
+
+.search-btn i {
+  font-size: 18px;
+}
