--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,10 +7,15 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-     <form action="/clothings" method="get">
-      <input type="text" name="q" value="<%= params[:q] %>">
-      <button type="submit">Search</button>
+
+     <form action="/clothings" method="get" class="search-bar">
+      <input type="text" name="q" placeholder="Search clothing..." value="<%= params[:q] %>">
+      <button type="submit" class="search-btn">
+        <i class="fas fa-search"></i> 
+      </button>
     </form>
+
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
