--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -26,3 +26,9 @@ $border-radius-xl:            .5rem;
 $border-radius-xxl:           1rem;
 
 // Override other variables below!
+$navbar-toggler-font-size: 0.8rem;
+$navbar-light-toggler-border-color: white;
+$navbar-light-active-color: white;
+$navbar-toggler-focus-width: 0rem;
+$navbar-toggler-padding-x: 0rem;
+$navbar-toggler-padding-y: 0rem;
