--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -58,3 +58,15 @@
 .search-btn i {
   font-size: 18px;
 }
+
+.navbar-toggle {
+  cursor: pointer;
+}
+
+.navbar-toggle:hover {
+  box-shadow: 0 0 0.5rem rgba(0,0,0,0.1);
+}
+
+.toggler-container {
+  position: relative
+}
