--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,48 +1,35 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "hhlogo.png", alt: "text" %>
     <% end %>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
      <form action="/clothings" method="get" class="search-bar">
       <input type="text" name="q" placeholder="Search clothing..." value="<%= params[:q] %>">
       <button type="submit" class="search-btn">
-        <i class="fas fa-search"></i> 
+        <i class="fas fa-search"></i>
       </button>
     </form>
 
+    <% if user_signed_in? %>
+      <div class="toggler-container">
+        <div class="navbar-toggle border rounded-pill py-1 px-2" data-bs-toggle="dropdown">
+          <span class="navbar-toggler-icon"></span>
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+        </div>
+        <div class="mt-2 dropdown-menu dropdown-menu-end mt-0" aria-labelledby="navbarDropdown">
+          <%= link_to "Home", root_path, class: "dropdown-item" %>
+          <%= link_to "My bookings", bookings_path, class: "dropdown-item" %>
+          <%= link_to "My clothes", owner_bookings_path(current_user), class: "dropdown-item" %>
+          <%= link_to "List my clothing", new_clothing_path, class: "dropdown-item"%>
+          <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+        </div>
+      </div>
+    <% else %>
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+    <% end %>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <% if current_user.owner_bookings.any? %>
-              <%= link_to "My clothes", owner_bookings_path(current_user),class: "nav-link" %>
-            <% end %>
-            <%= link_to "My bookings", bookings_path, class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "List clothing", new_clothing_path, class: "dropdown-item"%>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
+
+
   </div>
 </div>
