add renter and price info on bookings cards, and style them

--- a/app/views/bookings/_status.html.erb
+++ b/app/views/bookings/_status.html.erb
@@ -6,5 +6,5 @@
   <% else %>
       <span class="status-circle rounded-circle bg-danger"></span>
   <% end %>
-  <p class="m-0"><%= status %></p>
+  <p class="fs-6 m-0"><%= status %></p>
 </div>
