--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -26,6 +26,7 @@ $border-radius-xl:            .5rem;
 $border-radius-xxl:           1rem;
 
 // Override other variables below!
+$h6-font-size: 0.8rem;
 $navbar-toggler-font-size: 0.8rem;
 $navbar-light-toggler-border-color: white;
 $navbar-light-active-color: white;
