--- a/app/views/owner/bookings/index.html.erb
+++ b/app/views/owner/bookings/index.html.erb
@@ -8,7 +8,7 @@
   <h2>My clothes</h2>
 
   <% @bookings.each do |booking| %>
-    <div class="mt-4 card-product">
+    <div class="mt-4 card-product position-relative">
       <%= cl_image_tag booking.clothing.photo.key, alt: "" %>
       <div class="card-product-infos">
         <h2 class="fs-2"><%= booking.clothing.name %></h2>
@@ -20,12 +20,12 @@
             <%= booking.start_date.strftime("%b %d") %> -
             <%= booking.end_date.strftime("%b %d") %>
             </p>
-            <p class="fs-6 text-end">¥<%= booking.clothing.price.to_i %>/day</p>
+          <p class="fs-6 text-end">¥<%= booking.clothing.price.to_i %>/day</p>
           <h2 class="text-end fs-4">¥<%= (booking.clothing.price * (booking.end_date - booking.start_date)).to_i %></h2>
         <% end %>
 
         <% if booking.status == "pending" %>
-          <div class="d-flex">
+          <div class="d-flex position-absolute bottom-10">
             <%= form_with(model: booking, url: owner_booking_path(booking), method: :patch, local: true) do |f| %>
               <div class="mt-2">
                 <%= f.hidden_field :status, value: 'accepted' %>
