--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -21,7 +21,7 @@
       <div class="mt-4">
         <p><strong>Size:</strong> <%= @clothing.size %></p>
         <p><strong>Color:</strong> <%= @clothing.color %></p>
-        <p><%= @clothing.description %></p>
+        <p><strong>Color:</strong> <%= @clothing.description %></p>
       </div>
     </div>
 
