--- a/app/views/owner/bookings/index.html.erb
+++ b/app/views/owner/bookings/index.html.erb
@@ -50,6 +50,19 @@
       <%= cl_image_tag clothing.photo.key, alt: "" %>
       <div class="card-product-infos">
         <h2><%= clothing.name %></h2>
+        <h2><%= clothing.color %></h2>
+
+      <div class="d-flex justify-content-end gap-3 mt-2">
+
+        <%= link_to edit_clothing_path(clothing), class: "text-primary" do %>
+          <i class="fas fa-edit"></i>
+        <% end %>
+
+
+        <%= button_to clothing_path(clothing), method: :delete, data: { confirm: "Are you sure?" }, class: "text-danger border-0 bg-transparent" do %>
+          <i class="fas fa-trash-alt"></i>
+        <% end %>
+      </div>
 
       </div>
     </div>
