--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,9 +5,7 @@ h1 {
   margin-bottom: 30px;
   color: #333;
 }
-.a {
-  text-decoration: none !important;
-}
+
 .clothing-list, .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -22,6 +20,13 @@ h1 {
   overflow: hidden;
   transition: transform 0.2s ease-in-out;
   position: relative;
+}
+
+.a {
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
 .clothing-item:hover, .card-trip:hover {
   transform: scale(1.03);
