fix status spinner

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -38,3 +38,4 @@ $navbar-light-active-color: white;
 $navbar-toggler-focus-width: 0rem;
 $navbar-toggler-padding-x: 0rem;
 $navbar-toggler-padding-y: 0rem;
+$spinner-animation-speed: 3s;
