--- a/app/assets/stylesheets/components/_booking_card.scss
+++ b/app/assets/stylesheets/components/_booking_card.scss
@@ -33,7 +33,9 @@
 
 .status-circle {
   display: inline-block;
+  border-radius: 50%;
   width: 12px;
   height: 12px;
   padding: 0;
+  opacity: 0.7;
 }
