--- a/app/views/clothings/_new_cloth_form.html.erb
+++ b/app/views/clothings/_new_cloth_form.html.erb
@@ -21,8 +21,9 @@
 
       <div class="form-group">
         <%= f.label :country, "Select Country", class: "d-block" %>
-        <%= f.country_select :country, { multiple: true},
-        { class: "form-control", data: { controller: "tom-select" } } %>
+        <%= f.country_select :country,
+        {},
+        { class: "form-control", data: { controller: "tom-select", tom_select_options_value: "{}" } } %>
       </div>
 
       <div class="form-group">
