--- a/app/views/clothings/new.html.erb
+++ b/app/views/clothings/new.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
-  <h1>Hello!</h1>
+<div class="container pt-8" >
   <%= render "clothings/new_cloth_form", clothing: @clothing%>
 </div>
