--- a/app/views/owner/bookings/index.html.erb
+++ b/app/views/owner/bookings/index.html.erb
@@ -57,7 +57,7 @@
       <p><%= clothing.color %></p>
       <p><%= clothing.size %></p>
       <p><%= clothing.country %></p>
-
+      <p><%= clothing.address %></p>
       <div class="d-flex justify-content-end gap-3 mt-2">
 
 
