--- a/app/views/clothings/new.html.erb
+++ b/app/views/clothings/new.html.erb
@@ -1,3 +1,3 @@
-<div class="container pt-8" >
+<div class="container my-4" >
   <%= render "clothings/new_cloth_form", clothing: @clothing%>
 </div>
