--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,7 +21,12 @@ h1 {
   transition: transform 0.2s ease-in-out;
   position: relative;
 }
-
+.card-trip-pricing .per-day {
+  font-size: 14px; /* Smaller text for "/day" */
+  font-weight: normal;
+  color: #666;
+  margin-left: 4px;
+}
 .a {
   position:absolute;
   top: 0;
