--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,35 +1,34 @@
 <div class="navbar navbar-light navbar-lewagon">
   <div class="container-fluid">
+    <!-- Logo -->
     <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "hhlogo.png", alt: "text" %>
     <% end %>
 
-     <form action="/clothings" method="get" class="search-bar">
+    <!-- Airbnb-style Search Bar -->
+    <form action="/clothings" method="get" class="search-bar">
       <input type="text" name="q" placeholder="Search clothing..." value="<%= params[:q] %>">
       <button type="submit" class="search-btn">
         <i class="fas fa-search"></i>
       </button>
     </form>
 
+    <!-- User Profile Dropdown -->
     <% if user_signed_in? %>
       <div class="toggler-container">
         <div class="navbar-toggle border rounded-pill py-1 px-2" data-bs-toggle="dropdown">
           <span class="navbar-toggler-icon"></span>
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+          <%= image_tag "arnold.jpg", class: "avatar", alt: "dropdown menu" %>
         </div>
-        <div class="mt-2 dropdown-menu dropdown-menu-end mt-0" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu dropdown-menu-end mt-0">
           <%= link_to "Home", root_path, class: "dropdown-item" %>
           <%= link_to "My bookings", bookings_path, class: "dropdown-item" %>
           <%= link_to "My clothes", owner_bookings_path(current_user), class: "dropdown-item" %>
           <%= link_to "List my clothing", new_clothing_path, class: "dropdown-item"%>
-          <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+          <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
         </div>
       </div>
     <% else %>
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-    <% end %>
-
-
-
+      <%= link_to "Login", new_user_session_path, class: "btn btn-login" %>        <% end %>
   </div>
 </div>
